apps/compos_core/priv/grammars/composml/grammar.js
module.exports = grammar({
  name: "composml",
  externals: $ => [$.style_text, $.script_text],

  rules: {
    fragment: ($) => repeat($._node),

    _node: ($) =>
      choice(
        $.doctype,
        $.style_element,
        $.script_element,
        $.tag,
        $.component,
        $.entity,
        $.text,
        $.comment,
        $.directive,
        $.expression
      ),

    doctype: ($) => seq("<!", "DOCTYPE", "html", ">"),

    tag: ($) =>
      choice(seq($.start_tag, repeat($._node), $.end_tag), $.self_closing_tag),

    component: ($) =>
      choice(
        seq(
          $.start_component,
          repeat(choice($._node, $.slot)),
          $.end_component
        ),
        $.self_closing_component
      ),

    slot: ($) =>
      choice(
        seq($.start_slot, repeat($._node), $.end_slot),
        $.self_closing_slot
      ),

    start_tag: ($) =>
      seq(
        "<",
        field("name", $._element_name),
        repeat(choice($.attribute, $.expression, $.special_attribute)),
        ">"
      ),

    end_tag: ($) => seq("</", field("name", $._element_name), ">"),

    self_closing_tag: ($) =>
      seq(
        "<",
        field("name", $._element_name),
        repeat(choice($.attribute, $.expression, $.special_attribute)),
        "/>"
      ),

    start_component: ($) =>
      seq(
        "<",
        $.component_name,
        repeat(choice($.attribute, $.expression, $.special_attribute)),
        ">"
      ),

    end_component: ($) => seq("</", $.component_name, ">"),

    self_closing_component: ($) =>
      seq(
        "<",
        $.component_name,
        repeat(choice($.attribute, $.expression, $.special_attribute)),
        "/>"
      ),

    start_slot: ($) =>
      seq(
        "<:",
        alias($.tag_name, $.slot_name),
        repeat(choice($.attribute, $.expression, $.special_attribute)),
        ">"
      ),

    end_slot: ($) => seq("</:", alias($.tag_name, $.slot_name), ">"),

    self_closing_slot: ($) =>
      seq(
        "<:",
        alias($.tag_name, $.slot_name),
        repeat(choice($.attribute, $.expression, $.special_attribute)),
        "/>"
      ),

    expression: ($) =>
      seq(
        "{",
        prec.left(
          seq(alias(repeat($._expression_value), $.expression_value), "}")
        )
      ),

    _expression_value: ($) =>
      // Note that we alias "{" and "}", so they are not targetted by
      // delimiter highlight queries.
      choice(
        $.quoted_code,
        /[^{}"'\\]+/,
        /\\./,
        seq(
          alias("{", "left"),
          repeat($._expression_value),
          alias("}", "right")
        )
      ),

    special_attribute: ($) => seq($.special_attribute_name, "=", $.expression),

    special_attribute_name: ($) =>
      choice(":let", ":for", ":key", ":stream", ":if"),

    attribute: ($) =>
      seq(
        $.attribute_name,
        optional(
          seq(
            "=",
            choice($.quoted_attribute_value, $.attribute_value, $.expression)
          )
        )
      ),

    attribute_value: ($) => /[^<>{}"'=\s]+/,

    quoted_attribute_value: ($) =>
      choice(
        seq("'", optional(alias(/[^']+/, $.attribute_value)), "'"),
        seq('"', optional(alias(/[^"]+/, $.attribute_value)), '"')
      ),

    directive: ($) =>
      seq(
        choice("<%", "<%=", "<%%", "<%%="),
        prec.left(
          seq(
            choice(
              $.partial_expression_value,
              $.ending_expression_value,
              $.expression_value
            ),
            "%>"
          )
        )
      ),

    comment: ($) => choice($._html_comment, $._bang_comment, $._hash_comment),

    _html_comment: ($) => seq("<!--", prec.left(seq(repeat(/[^-]+|-/), "-->"))),

    _bang_comment: ($) =>
      seq("<%!--", prec.left(seq(repeat(/[^-]+|-/), "--%>"))),

    _hash_comment: ($) => seq("<%#", prec.left(seq(repeat($._code), "%>"))),

    expression_value: ($) => repeat1($._code),

    partial_expression_value: ($) =>
      seq(
        repeat($._code),
        choice("do", "catch", "rescue", "after", "else", "->"),
        optional(seq("#", repeat($._code)))
      ),

    ending_expression_value: ($) => seq(/end[\)\]\}]*/, repeat($._code)),

    component_name: ($) =>
      choice(seq(optional($.module), seq(".", $.function)), $.module),

    module: ($) => /([A-Z][^\-<>{}!"'/=\s\.]*)(\.[A-Z][^\-<>{}!"'/=\s\.]*)*/,

    function: ($) => /[a-z][^\-<>{}!"'/=\s\.]*/,

    quoted_code: $ => token(prec(3, choice(/"([^"\\]|\\.)*"/, /'([^'\\]|\\.)*'/))),
    _code: ($) => choice($.quoted_code, /[^%\s"']+|[%\s]/),

    _element_name: $ => choice($.semantic_name, $.tag_name),
    semantic_name: $ => token(prec(2, choice("mailboxes", "mailbox", "buffers", "buffer", "directory", "file", "filename", "size", "modified", "permissions", "icon", /[a-z][a-z0-9]*-[a-z][a-z0-9-]*/))),
    style_element: $ => seq($.style_start_tag, repeat(choice($.style_text, $.directive)), $.end_tag),
    script_element: $ => seq($.script_start_tag, repeat(choice($.script_text, $.directive)), $.end_tag),
    style_start_tag: $ => seq("<", alias("style", $.tag_name), repeat(choice($.attribute, $.expression, $.special_attribute)), ">"),
    script_start_tag: $ => seq("<", alias("script", $.tag_name), repeat(choice($.attribute, $.expression, $.special_attribute)), ">"),
    tag_name: ($) => /[a-z]+[^<>{}!"'/=\s]*/,

    attribute_name: ($) => token(prec(-1, /[^:<>{}"'/=\s][^<>{}"'/=\s]*/)),

    text: ($) => /[^<>{}&\s]([^<>{}&]*[^<>{}&\s])?/,

    entity: ($) => /&(#([xX][0-9a-fA-F]{1,6}|[0-9]{1,5})|[A-Za-z]{1,30});?/,
  },
});
