apps/compos_core/priv/grammars/composml/test/corpus/tags.txt
================================================================================
HTML Tag
================================================================================

<div>
</div>

--------------------------------------------------------------------------------

(fragment
  (tag
    (start_tag
      (tag_name))
    (end_tag
      (tag_name))))

================================================================================
HTML Self-Closing Tag
================================================================================

<div/>

--------------------------------------------------------------------------------

(fragment
  (tag
    (self_closing_tag
      (tag_name))))

================================================================================
HTML Nested Tags
================================================================================

<div>
  <div>
    <div />
  </div>
</div>

--------------------------------------------------------------------------------

(fragment
  (tag
    (start_tag
      (tag_name))
    (tag
      (start_tag
        (tag_name))
      (tag
        (self_closing_tag
          (tag_name)))
      (end_tag
        (tag_name)))
    (end_tag
      (tag_name))))

================================================================================
DOCTYPE
================================================================================

<!DOCTYPE html>

<html lang="en">
  <body>
  <%= @inner_content %>
  </body> 
</html>

--------------------------------------------------------------------------------

(fragment
  (doctype)
  (tag
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value))))
    (tag
      (start_tag
        (tag_name))
      (directive
        (expression_value))
      (end_tag
        (tag_name)))
    (end_tag
      (tag_name))))

================================================================================
Tag name with hyphen
================================================================================

<box-icon name='like'>
</box-icon>

--------------------------------------------------------------------------------

(fragment
  (tag
    (start_tag
      (semantic_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value))))
    (end_tag
      (semantic_name))))

================================================================================
Mailbox domain collection
================================================================================

<mailboxes><mailbox /></mailboxes>

--------------------------------------------------------------------------------

(fragment
  (tag
    (start_tag (semantic_name))
    (tag (self_closing_tag (semantic_name)))
    (end_tag (semantic_name))))
